--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="heading-image-container">
         <img
           class="heading-image"
-          src="./Img/Hero-image.png"
+          src="img/Hero-image.png"
           alt="sitting in chair with laptop"
         />
       </div>
