--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         opportunity within days.
       </p>
     </div>
-
+    
     <!-- Experiecne -->
     <div class="experience-container">
       <h2 class="heading_secondary">No experience are required from you</h2>
@@ -77,8 +77,15 @@
       </div>
 
       <div class="address-container">
-        <p>WhatsApp:</p>
-        <p>Telegram:</p>
+        <p>
+          WhatsApp:
+          <a href="https://api.whatsapp.com/send?phone=6009983191">
+            Send a WhatsApp.</a>
+        </p>
+        <p>
+          Telegram:
+          <a href="https://t.me/Meshil(80481735)"> Join us on Telegram</a>
+        </p>
       </div>
     </footer>
   </body>
