--- a/index.html
+++ b/index.html
@@ -13,80 +13,7 @@
     />
   </head>
   <body>
-    <header class="heading-container">
-      <div class="heading_text">
-        <h1 class="main_heading">Earn Money Working from Phone and Computer</h1>
-
-        <p>Earn up to 500+ rupees/Day</p>
-
-        <p>
-          Make immediate money from your home, learn from Internet
-          entrepreneuship and work remotely.
-        </p>
-        <p>
-          You can contact us via WhatsApp and Telegram more than 15,000 rupees
-          per month.
-        </p>
-        <p>Requirement: 10+, Age limit 20+</p>
-      </div>
-
-      <div class="heading-image-container">
-        <img
-          class="heading-image"
-          src="Img/Hero-image.png"
-          alt="sitting in chair with laptop"
-        />
-      </div>
-    </header>
-
-    <!-- Another Job -->
-    <div class="hero-container">
-      <h2 class="heading_secondary">
-        You'll never have to apply for another job
-      </h2>
-
-      <p>
-        We offer full-time, extended commitments. As we approach the conclusion
-        of one project, our team swiftly begins the search for your next
-        opportunity within days.
-      </p>
-    </div>
-    
-    <!-- Experiecne -->
-    <div class="experience-container">
-      <h2 class="heading_secondary">No experience are required from you</h2>
-      <p>
-        Our mentors will guide you through the process, teaching you each step
-        along the way.
-      </p>
-    </div>
-
-    <div class="reviews-container">
-      <h2 class="heading_secondary">Watch Our Latest Reviews</h2>
-
-      <div class="reviews_box">
-        <p>EARN MONEY WITHOUT ANY EXPERIENCE - BEST PART TIME JOB</p>
-        <p>It is a legit and truth-full! My friends are joining too.</p>
-        <p>Easy ways to Make Money Online.</p>
-      </div>
-    </div>
-
-    <footer class="footer-container">
-      <div class="footer-heading">
-        <h1 class="footer-heading-text">Contact Us</h1>
-      </div>
-
-      <div class="address-container">
-        <p>
-          WhatsApp:
-          <a href="https://api.whatsapp.com/send?phone=6009983191">
-            Send a WhatsApp.</a>
-        </p>
-        <p>
-          Telegram:
-          <a href="https://t.me/Meshil(80481735)"> Join us on Telegram</a>
-        </p>
-      </div>
-    </footer>
+    <h1> The MNBA </h1>
+    <p> Comming soon !</p>
   </body>
 </html>
